Connected CodEbot with GUI

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
             <ul>
               <li>
                 <strong>Đề tài:</strong> CodEbot - Một hệ thống chatbot sử dụng ngôn ngữ Tiếng Việt để giải đáp thắc mắc
-                trong lập trình cơ bản<br />
+                trong lập trình C++ và Python cơ bản<br />
               </li>
               <li>
                 <strong>Nhóm tác giả:</strong>
@@ -39,54 +39,7 @@
             <div class="chatview">
               <div class="container-fluid message-list">
                 <div class="fill"></div>
-                <div class="row bot-message message">
-                  <div class="avatar">
-  
-                  </div>
-                  <div class="chat-bubble">
-                    Income Message!Income Message!Income Message!Income Message!Income Message!Income Message!Income Message!Income Message!Income Message!Income Message!Income Message!Income Message!Income Message!Income Message!Income Message!Income Message!Income Message!Income Message!Income Message!
-                  </div>
-                </div>
-                <div class="row user-message message justify-content-end">
-                  <div class="chat-bubble">
-                    Sent Message!
-                  </div>
-                  <div class="avatar">
-  
-                  </div>
-                </div>
-                <div class="row bot-message message">
-                  <div class="avatar">
-  
-                  </div>
-                  <div class="chat-bubble">
-                    Income Message!
-                  </div>
-                </div>
-                <div class="row user-message message justify-content-end">
-                  <div class="chat-bubble">
-                    Sent Message!
-                  </div>
-                  <div class="avatar">
-  
-                  </div>
-                </div>
-                <div class="row bot-message message">
-                  <div class="avatar">
-  
-                  </div>
-                  <div class="chat-bubble">
-                    Income Message!
-                  </div>
-                </div>
-                <div class="row user-message message justify-content-end">
-                  <div class="chat-bubble">
-                    Sent Message!
-                  </div>
-                  <div class="avatar">
-  
-                  </div>
-                </div>
+                
               </div>
               <div class="chat-status">Đang trả lời...</div>
             </div>
