Auto stash before merge of "master" and "origin/master"

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CodEbot - Hỗ trợ học lập trình bằng tiếng Việt</title>
+	<link rel="icon" href="image/logo.png">
+    <title>CodEbot DEMO - Hỗ trợ học lập trình bằng tiếng Việt</title>
 
     <link rel="stylesheet" href="css/style.css" />
   </head>
