Update chatbot, update bootstrap, jquery, add Knowledge Management GUI

--- a/public/index.html
+++ b/public/index.html
@@ -6,15 +6,17 @@
 	<link rel="icon" href="image/logo.png">
     <title>CodEbot DEMO - Hỗ trợ học lập trình bằng tiếng Việt</title>
 
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/index.style.css" />
   </head>
   <body>
     <div class="wrapper container-fluid vh-100">
       <div class="row h-100">
         <div id="information" class="col-12 col-lg-6 show">
           <div class="brand">
-            <img class="logo" src="./image/logo.png" alt="CodEbot" />
-            <a class="name" href="">CodEbot</a>
+            <a href="">
+              <img class="logo" src="image/logo.png" alt="CodEbot" />
+              <span class="name">CodEbot</span>
+            </a>
             <button class="show-info btn"><i class="fas fa-info"></i></button>
           </div>
           <div class="info px-4">
@@ -57,6 +59,6 @@
       </div>
     </div>
 
-    <script src="js/bundle.js"></script>
+    <script src="js/index.bundle.js"></script>
   </body>
 </html>
